added project tiles for CISC 3610 projects

--- a/index.html
+++ b/index.html
@@ -74,21 +74,25 @@
           <p>jamila.toaha.dev@gmail.com</p> -->
           <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
           <dl id="project-list-3610">
-            <dt>Projects: (Completed)</dt>
-              <dd><a class="project-link-3610" href="CISC3610Projects/CartoonProject/index.html">Cartoon — ("house by the seaside")</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Projects/AnimationProject/index.html">Animation — ("heroes waiting ground")</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Projects/DataVisualizationProject/index.html">Data Visualization — (Water Consumption History/ Urban Agriculture lots)</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Projects/PhaserProject/index.html">Phaser: Game Project — (Rescue Ops)</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Projects/AudioProject/index.html">Voice Recognition Project — (Uses Web Speech API) </a></dd>
+            <dt>Projects:</dt>
+            <div>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Projects/CartoonProject/index.html">Cartoon — ("house by the seaside")<img src="images/project-covers/house-seaside-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Projects/AnimationProject/index.html">Animation — ("heroes waiting ground")<img src="images/project-covers/heroes-cover.png"></a></dd>
+              <dd class="project-tile" ><a target="_blank" href="CISC3610Projects/DataVisualizationProject/index.html">Data Visualization — (Water Consumption History/ Urban Agriculture lots)<br><img src="images/project-covers/data-visual-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Projects/PhaserProject/index.html">Phaser: Game Project — (Rescue Ops)<img src="images/project-covers/rescue-ops-cover.png"></a> Need to add loading animation, but one of my favorites so far</dd>
+              <dd class="project-tile"><a target="_blank"  href="CISC3610Projects/AudioProject/index.html">Voice Recognition Project — (Uses Web Speech API)<img src="images/project-covers/audio-project-cover.png"></a></dd>
+            </div>
 
-            <dt>Labs: (Completed)</dt>
-              <dd><a class="project-link-3610" href="CISC3610Labs/lab1-chartlab/index.html">Bar Chart — (Fruit Bars/ extra features added)</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Labs/animation-lab/index.html">Animation — (0-10 Spritesheet Animation/  extra features added)</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Labs/form-lab/index.html">Form — (Implements Local Storage)</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Labs/phaser-lab/index.html">Phaser Lab — (Drag and Drop Picnic)</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Labs/resume-lab/index.html">Resume Lab — (using Start Bootstrap)</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Labs/audio-lab/index.html">Audio Lab — (Retro Boom Box)</a></dd>
-              <dd><a class="project-link-3610" href="CISC3610Labs/video-lab/index.html">Video Lab — (Fun Science)</a></dd>
+            <dt>Labs:</dt>
+            <div>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Labs/lab1-chartlab/index.html">Bar Chart — (Fruit Bars/ extra features added)<img src="images/project-covers/fruit-bars-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Labs/animation-lab/index.html">Animation — (0-10 Spritesheet Animation/  extra features added)<img src="images/project-covers/number-countdown-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank"  href="CISC3610Labs/form-lab/index.html">Form — (Implements Local Storage)<img src="images/project-covers/form-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Labs/phaser-lab/index.html">Phaser Lab — (Drag and Drop Picnic)<img src="images/project-covers/picnic-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Labs/resume-lab/index.html">Resume Lab — (using Start Bootstrap)<img src="images/project-covers/bootstrap-resume-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Labs/audio-lab/index.html">Audio Lab — (Retro Boom Box)<img src="images/project-covers/boombox-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Labs/video-lab/index.html">Video Lab — (Fun Science)<img src="images/project-covers/fun-science-cover.png"></a></dd>
+            </div>
           </dl>
 
         </div>
