added 3620 project tiles and moved projects to a seperate page

--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
       <div id="portfolio-content">
       <p>Hello there! My name is Jamila.
         I am an aspiring Software Developer with a strong interest in the intersection of programming, math and art. I am currently working on completing my Multimedia Computing, B.S. degree with minors in Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
-        Below are some projects I've worked on: </p>
+        Below are some projects I've worked on: (6/30/20 Note: I'm in the process of consolidating and updating this portfolio) </p>
 
         <section id="cisc3610">
           <h2>CISC 3610: Introduction to Multimedia Programming</h2>
-          <!-- <p>Jamila Toaha</p>
-          <p>jamila.toaha.dev@gmail.com</p> -->
+          <p>Course Taken: Spring 2020</p>
           <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
-          <dl id="project-list-3610">
+          <p>General guidelines and constraints to follow were given. Other than that, was able to excercise creative freedom in these projects</p>
+          <dl class="project-list">
             <dt>Projects:</dt>
             <div>
-              <dd class="project-tile"><a target="_blank" href="CISC3610Projects/CartoonProject/index.html">Cartoon — ("house by the seaside")<img src="images/project-covers/house-seaside-cover.png"></a></dd>
-              <dd class="project-tile"><a target="_blank" href="CISC3610Projects/AnimationProject/index.html">Animation — ("heroes waiting ground")<img src="images/project-covers/heroes-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Projects/CartoonProject/index.html">Cartoon — ("house by the seaside")<img src="images/project-covers/house-seaside-cover.png">drawn using html 5 canvas methods</a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3610Projects/AnimationProject/index.html">Animation — ("heroes waiting ground")<img src="images/project-covers/heroes-cover.png"></a>Animated using spritesheets</dd>
               <dd class="project-tile" ><a target="_blank" href="CISC3610Projects/DataVisualizationProject/index.html">Data Visualization — (Water Consumption History/ Urban Agriculture lots)<br><img src="images/project-covers/data-visual-cover.png"></a></dd>
               <dd class="project-tile"><a target="_blank" href="CISC3610Projects/PhaserProject/index.html">Phaser: Game Project — (Rescue Ops)<img src="images/project-covers/rescue-ops-cover.png"></a> Need to add loading animation, but one of my favorites so far</dd>
               <dd class="project-tile"><a target="_blank"  href="CISC3610Projects/AudioProject/index.html">Voice Recognition Project — (Uses Web Speech API)<img src="images/project-covers/audio-project-cover.png"></a></dd>
@@ -94,65 +94,28 @@
               <dd class="project-tile"><a target="_blank" href="CISC3610Labs/video-lab/index.html">Video Lab — (Fun Science)<img src="images/project-covers/fun-science-cover.png"></a></dd>
             </div>
           </dl>
+        </section>
 
-        </div>
+          <section id="cisc3610">
+            <h2>CISC 3620: Computer Graphics</h2>
+            <p>Course Taken: Spring 2020</p>
+            <p>Source Code: <a href="https://codepen.io/jtoaha/">https://codepen.io/jtoaha/</a></p>
+            <dl class="project-list">
+              <dt>Projects:</dt>
+                <div>
+                  <dd class="project-tile"><a target="_blank" href="CISC3620/index.html#obelisk">Obelisk<img src="images/project-covers/obelisk-cover.png"></a></dd>
+                  <dd class="project-tile"><a target="_blank" href="CISC3620/index.html#clown">Clown<img src="images/project-covers/clown-cover.png"></a></dd>
+                  <dd class="project-tile" ><a target="_blank" href="CISC3620/index.html#room">Lit Room (toggle lights)<br><img src="images/project-covers/room-cover.png"></a></dd>
+                  <dd class="project-tile"><a target="_blank" href="CISC3620/index.html#barn">Textured Barn<img src="images/project-covers/barn-cover.png"></a></dd>
+                  <dd class="project-tile"><a target="_blank"  href="CISC3620/index.html#hepta">Hepta3grams<img src="images/project-covers/hepta-cover.png"></a></dd>
+                </div>
+                </dl>
         </section>
 
 
 
     </section>
 
-
-
-
-    <section id="cisc3620">
-      <h2>CISC 3620: Computer Graphics Projects</h2>
-
-      <div>
-        <p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="XWbZyJx" style="height: 600px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="V2 Obelisk  Three.js">
-          <span>See the Pen <a href="https://codepen.io/jtoaha/pen/XWbZyJx">
-          V2 Obelisk  Three.js</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
-          on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-      </div>
-
-      <div>
-      <p class="codepen" data-height="550" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="xxGPdzv" style="height:500px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Clown">
-        <span>See the Pen <a href="https://codepen.io/jtoaha/pen/xxGPdzv">
-        Clown</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
-        on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>
-      <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-      </div>
-
-      <div>
-        <p class="codepen" data-height="550" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="gOaMKpX" style="height: 550px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Lit Scene">
-          <span>See the Pen <a href="https://codepen.io/jtoaha/pen/gOaMKpX">
-          Lit Scene</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
-          on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-      </div>
-
-      <div>
-        <p class="codepen" data-height="550" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="LYpWdgx" style="height: 550px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Textured barn">
-          <span>See the Pen <a href="https://codepen.io/jtoaha/pen/LYpWdgx">
-          Textured barn</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
-          on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-      </div>
-
-      <div>
-        <p class="codepen" data-height="700" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="GRpdwNE" style="height: 700px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="HW6 --- Hepta3star">
-          <span>See the Pen <a href="https://codepen.io/jtoaha/pen/GRpdwNE">
-          HW6 --- Hepta3star</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
-          on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-      </div>
-      </section>
 
 
       <section id="fcc">
