--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
       <div id="portfolio-content">
       <p>Hello there! My name is Jamila.
         I am an aspiring Software Developer with a strong interest in the intersection of programming, math and art. I am currently working on completing my Multimedia Computing, B.S. degree with minors in Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
-        Below are some projects I've worked on: (6/30/20 Note: I'm in the process of consolidating and updating this portfolio) </p>
+        Below are some projects I've worked on: (6/30/20 Note: I'm in the process of consolidating and updating this portfolio- Will update CSS more once I finish moving around and adding content.) </p>
+
+        <section id="fcc">
+          <h2>Free Code Camp Projects</h2>
+          <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
+          <dl class="project-list">
+            <dt>Projects:</dt>
+
+            </dl>
+        </section>
 
         <section id="cisc3610">
           <h2>CISC 3610: Introduction to Multimedia Programming</h2>
