added project tiles for Free Code Camp projects

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
           <dl class="project-list">
             <dt>Projects:</dt>
+            <div>
+              <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-drum-machine/dist/index.html">Drum Machine (using React)<img src="images/project-covers/drum-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-markdown-previewer/dist/index.html">Markdown Previewer (using React and Redux)<img src="images/project-covers/markdown-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank"  href="FreeCodeCampProjects/fcc-random-quote-machine/dist/index.html">Random Quote Machine<img src="images/project-covers/quote-cover.png"></a></dd>
+            </div>
 
             </dl>
         </section>
@@ -127,10 +132,6 @@
 
 
 
-      <section id="fcc">
-        <h2>Free Code Camp Projects</h2>
-
-      </section>
 
       <section id="content">
         <br/>
