updated FCC section

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
           <h2>Free Code Camp Projects</h2>
           <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
           <dl class="project-list">
-            <dt>Projects:</dt>
+            <dt>Front End Libraries Projects (Summer 2020):</dt>
             <div>
               <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-drum-machine/dist/index.html">Drum Machine (using React)<img src="images/project-covers/drum-cover.png"></a></dd>
               <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-markdown-previewer/dist/index.html">Markdown Previewer (using React and Redux)<img src="images/project-covers/markdown-cover.png"></a></dd>
-              <dd class="project-tile"><a target="_blank"  href="FreeCodeCampProjects/fcc-random-quote-machine/dist/index.html">Random Quote Machine<img src="images/project-covers/quote-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank"  href="FreeCodeCampProjects/fcc-random-quote-machine/dist/index.html">Random Quote Machine (using React)<img src="images/project-covers/quote-cover.png"></a></dd>
             </div>
 
             </dl>
