added instagram feed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div id="portfolio-content">
       <p>Hello there! My name is Jamila.
         I am an aspiring Software Developer with a strong interest in the intersection of programming, math and art. I am currently working on completing my Multimedia Computing, B.S. degree with minors in Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
-        Below are some projects I've worked on: (6/30/20 Note: I'm in the process of consolidating and updating this portfolio- Will update CSS more once I finish moving around and adding content.) </p>
+        Below are some projects I've worked on: (6/30/20 Note: I'm in the process of consolidating and updating this portfolio- Will update CSS more once I finish moving around and adding content (yet to add projects from Game Design and Human Computer Interaction courses) </p>
 
         <section id="fcc">
           <h2>Free Code Camp Projects</h2>
@@ -84,7 +84,7 @@
 
         <section id="cisc3610">
           <h2>CISC 3610: Introduction to Multimedia Programming</h2>
-          <p>Course Taken: Spring 2020</p>
+          <p>Spring 2020</p>
           <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
           <p>General guidelines and constraints to follow were given. Other than that, was able to excercise creative freedom in these projects</p>
           <dl class="project-list">
@@ -110,9 +110,9 @@
           </dl>
         </section>
 
-          <section id="cisc3610">
+          <section id="cisc3620">
             <h2>CISC 3620: Computer Graphics</h2>
-            <p>Course Taken: Spring 2020</p>
+            <p>Spring 2020</p>
             <p>Source Code: <a href="https://codepen.io/jtoaha/">https://codepen.io/jtoaha/</a></p>
             <dl class="project-list">
               <dt>Projects:</dt>
@@ -126,10 +126,26 @@
                 </dl>
         </section>
 
+        <section id="hci">
+          <h2>Human Computer Interaction</h2>
+          <p>Spring 2020</p>
+          <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
+          <dl class="project-list">
+            <dt>Solo Project</dt>
+            <dt>Group Project</dt>
 
+        </section>
 
-    </section>
+        <section id="game-design">
+          <h2>Game Design</h2>
+          <p>Spring 2020</p>
+          <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
+          <dl class="project-list">
+            <dt>Solo Project</dt>
 
+            <dt>Group Project</dt>
+
+        </section>
 
 
 
@@ -138,6 +154,7 @@
       <br/>
       <br/>
       <h2>CISC 1600: Intro to Multimedia Computing</h2>
+      <p>Fall 2019</p>
       <div class="project-content"   id="littlered-content">
         <h3>Little Red</h3>
         <a target="_blank" href="">Link to Project-Will Update</a>
@@ -169,6 +186,7 @@
       </div>
 
       <h2>Grace Hopper Program at Fullstack Academy</h2>
+      <p>Spring 2019</p>
     <div class="project-content"   id="card-content">
         <h3>c-AR-d</h3>
         <a target="_blank" href="http://c-ar-d-server.herokuapp.com/about">http://c-ar-d-server.herokuapp.com/about</a>
@@ -192,7 +210,20 @@
 
     </section>
 
-    <script src="" async defer></script>
+<section>
+    <!-- Place <div> tag where you want the feed to appear -->
+      <h2>My Instagram Feed</h2>
+<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+<!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+<script type="text/javascript">
+/* curator-feed-default-feed-layout */
+(function(){
+var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
+i.src = "https://cdn.curator.io/published/3d50526d-c832-412a-8731-b4b3bf154eee.js";
+e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+})();
+</script>
+</section>
 
   </body>
 </html>
