--- a/aboutme.html
+++ b/aboutme.html
@@ -15,9 +15,9 @@
     <nav id="navbar">
       <ul>
          <a class="nav-link" href="index.html"><li>Home</li></a>
-          <a class ="nav-link" href="#projects"><li>Projects</li></a>
-          <a class ="nav-link" href="index.html#cisc3610"><li>CISC 3610</li></a>
-          <a class ="nav-link" href="aboutme.html"><li>About Me</li></a>
+          <a class ="nav-link" href="#projects"><li>Resume</li></a>
+          <a class ="nav-link" href="index.html#portfolio"><li>Portfolio</li></a>
+          <a class ="nav-link" href="aboutme.html"><li>Contact Me</li></a>
       </ul>
     </nav>
     <a href= "index.html" >
