--- a/index.html
+++ b/index.html
@@ -224,6 +224,26 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
 })();
 </script>
 </section>
+</div>
+    </section>
+
+<br id="portfolio-br">
+<br>
+<br>
+<br>
+<section id="resume">
+  <h2>Resumé</h2>
+  <div id="resume-content">
+    Both resumes need some updating:
+     <object data="Jamila Toaha - Technical Resume 011520 .pdf" type="application/pdf" width="100%" height="100%">
+      <p>Technical Resume (1/15/20): <a  target="_blank" href="docs/Jamila Toaha - Technical Resume 011520 .pdf">Download</a></p>
+    </object>
+     <object data="Jamila Toaha Non-Technical Resume 11_20_19.pdf" type="application/pdf" width="100%" height="100%">
+      <p>Non-Technical Resume (11/20/19):<a target="_blank" href="docs/Jamila Toaha Non-Technical Resume 11_20_19.pdf">Download</a></p>
+    </object>
+    <p>LinkedIn Profile: <a href="https://www.linkedin.com/in/jamila-toaha/">https://www.linkedin.com/in/jamila-toaha/</a></p>
+    </div>
+  </section>
 
   </body>
 </html>
