updated navbar css- transparent black, pink hover, and matching home icon

--- a/aboutme.html
+++ b/aboutme.html
@@ -21,8 +21,7 @@
       </ul>
     </nav>
     <a href= "index.html" >
-      <img id="home-icon" alt="home button" src="./images/home-icon.png" />
-    </a>
+      <img id="home-icon" alt="home button" src="./images/home-icon-bw.png"  onmouseover="this.src='./images/home-icon-black-pink.png';" onmouseout="this.src='./images/home-icon-bw.png';" > </a>
 
     <section>
 
