--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
     <a href= "index.html" >
-      <img id="home-icon" alt="home button" src="./images/home-icon.png" />
+      <img id="home-icon" alt="home button" src="./images/home-icon-bw.png"  onmouseover="this.src='./images/home-icon-black-pink.png';" onmouseout="this.src='./images/home-icon-bw.png';" >
     </a>
     <section id="welcome-section">
       <div id="welcome-header">
