added Chill Beats tile to home page

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
           <dl class="project-list">
             <dt>Solo Project</dt>
-
+            <dd class="project-tile"><a target="_blank" href="CISC3650/CISC3650Website/index.html">Website: Chill Beats<img src="images/project-covers/chill-beats-cover.png"></a>Implements Local Storage, grants ability to add and bookmark Youtube videos, implements HTML5 Geolocation, as well as embeds a Google Map using an API key.</dd>
             <dt>Group Project</dt>
 
         </section>
