added revamped Dreidel tile

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
           <dl class="project-list">
             <dt>Solo Project</dt>
             <dt>Group Project</dt>
+            <dd class="project-tile project-tile-wide"><a target="_blank"  href="https://www.openprocessing.org/sketch/877947">revamped DREIDEL!<img src="images/project-covers/revamped-dreidel-cover.png"></a>My team worked on creating a revamped version of the game, Dreidel. This game alternates between spinning the dreidel and playing a memory matching card game to distribute coins. In this project, I was team lead and brought together everyone's ideas and contributions. We were luck to have a team member who designed a 3D model of the Dreidel. On my part, I also contributed where necessary. Largely responsible for implementing game logic, game play, and designing the cards using Adobe Illustrator. Created using p5.js and launched on the platform, openprocessing.org.</dd>
 
         </section>
 
