--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
   <h2>Resumé</h2>
   <div id="resume-content">
     Both resumes need some updating:
-     <object data="Jamila Toaha - Technical Resume 011520 .pdf" type="application/pdf" width="100%" height="100%">
-      <p>Technical Resume (1/15/20): <a  target="_blank" href="docs/Jamila Toaha - Technical Resume 011520 .pdf">Download</a></p>
+     <object data="Jamila Toaha - Tech Resume - 073020.pdf" type="application/pdf" width="100%" height="100%">
+      <p>Technical Resume (as of 7/30/20): <a  target="_blank" href="docs/Jamila Toaha - Tech Resume - 073020.pdf">Download</a></p>
     </object>
      <object data="Jamila Toaha Non-Technical Resume 11_20_19.pdf" type="application/pdf" width="100%" height="100%">
       <p>Non-Technical Resume (11/20/19):<a target="_blank" href="docs/Jamila Toaha Non-Technical Resume 11_20_19.pdf">Download</a></p>
