--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
       <div id="portfolio-content">
       <p>Hello there! My name is Jamila.
-        I am an aspiring Software Developer with a strong interest in the intersection of programming, math and art. I am currently working on completing my Multimedia Computing, B.S. degree with minors in Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
+        I am an aspiring Software Developer with a strong desire to make a difference in our communities. Always a Student seeking to expand my mind, my skills, and my impact. In my spare time, I explore the intersection of programming, math and art. Currently, I am working on completing my Multimedia Computing, B.S. degree with minors in Political Science, Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
+
         Below are some projects I've worked on: </p>
 
         <section id="fcc">
@@ -74,6 +75,7 @@
           <dl class="project-list">
             <dt>Front End Libraries Projects (Summer 2020):</dt>
             <div>
+              <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-pomodoro-clock/dist/index.html">Pomodoro Clock built with React.js<img src="images/project-covers/pomodoro-cover.png"></a></dd>
               <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-js-calculator/dist/index.html">Javascript Calculator (using React.js)<img src="images/project-covers/calculator-cover.png"></a></dd>
               <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-drum-machine/dist/index.html">Drum Machine (using React)<img src="images/project-covers/drum-cover.png"></a></dd>
               <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-markdown-previewer/dist/index.html">Markdown Previewer (using React and Redux)<img src="images/project-covers/markdown-cover.png"></a></dd>
