(feat) Added Tiling Series: Squares to homepage

--- a/index.html
+++ b/index.html
@@ -65,9 +65,21 @@
 
       <div id="portfolio-content">
       <p>Hello there! My name is Jamila.
-        I am an aspiring Software Developer with a strong desire to make a difference in our communities. Always a Student seeking to expand my mind, my skills, and my impact. In my spare time, I explore the intersection of programming, math and art. Currently, I am working on completing my Multimedia Computing, B.S. degree with minors in Political Science, Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
+        I am an aspiring Software Developer seeking to work for and volunteer in the Tech for Social Good sector. Always a Student seeking to expand my mind, my skills, and my impact. In my spare time, I explore the intersection of programming, math and art. Currently, I am working on completing my Multimedia Computing, B.S. degree with minors in Political Science, Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
 
         Below are some projects I've worked on: </p>
+
+        <section id="fun">
+          <h2>Fun Projects</h2>
+          Projects for Fun. In the process of trying to make making an interactive geometric art series.
+          <p>Source Code: <a href="https://github.com/jtoaha/TilingSeries/">https://github.com/jtoaha/TilingSeries</a></p>
+          <dl class="project-list">
+            <dt>Tiling Series: Square (Summer 2020):</dt>
+            <div>
+              <dd class="project-tile"><a target="_blank" href="TilingSeries/SquareTiles/index.html">Tiling Series: Square<img src="images/project-covers/square-cover.jpg">Interactive art made using HTML5 canvas. Scroll to bottom of page for different settings</a></dd>
+            </div>
+          </dl>
+        </section>
 
         <section id="fcc">
           <h2>Free Code Camp Projects</h2>
