(feat) transferred dodecasquare project

--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
         <section id="fun">
           <h2>Fun Projects</h2>
           Projects for Fun. In the process of trying to make making an interactive geometric art series.
-          <p>Source Code: <a href="https://github.com/jtoaha/TilingSeries/">https://github.com/jtoaha/TilingSeries</a></p>
+          <p>Source Code: <a target="_blank" href="https://github.com/jtoaha/TilingSeries/">https://github.com/jtoaha/TilingSeries</a></p>
           <dl class="project-list">
             <dt>Tiling Series: Square (Summer 2020):</dt>
             <div>
-              <dd class="project-tile"><a target="_blank" href="TilingSeries/SquareTiles/index.html">Tiling Series: Square<img src="images/project-covers/square-cover.jpg">Interactive art made using HTML5 canvas. Scroll to bottom of page for different settings</a></dd>
+              <dd class="project-tile"><a target="_blank" href="TilingSeries/SquareTiles/index.html">Tiling Series: Square<img src="images/project-covers/square-cover.jpg">Interactive art made using HTML5 canvas. Scroll to bottom of page for different settings. Squares tile across page. Has different modes. Pop-ups: Tiles fades in and pops onto page. Kaleidoscope: colors smoothly transition and change. Stationary. </a></dd>
+              <dd class="project-tile"><a target="_blank" href="TilingSeries/DodecaSquaresTiles/index.html">Tiling Series: DodecaSquare Rings<img src="images/project-covers/dodeca-cover.png">Interactive geometric art made using HTML5 canvas. Scroll to bottom of page for different settings. Rings are centered around an n-pointed star (default n value = 12)</a></dd>
             </div>
           </dl>
         </section>
