--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <dl class="project-list">
             <dt>Tiling Series: Square (Summer 2020):</dt>
             <div>
-              <dd class="project-tile"><a target="_blank" href="TilingSeries/SquareTiles/index.html">Tiling Series: Square<img src="images/project-covers/square-cover.jpg">Interactive art made using HTML5 canvas. Scroll to bottom of page for different settings. Squares tile across page. Has different modes. Pop-ups: Tiles fades in and pops onto page. Kaleidoscope: colors smoothly transition and change. Stationary. </a></dd>
+              <dd class="project-tile"><a target="_blank" href="TilingSeries/SquareTiles/index.html">Tiling Series: Square<img src="images/project-covers/square-cover.png">Interactive art made using HTML5 canvas. Scroll to bottom of page for different settings. Squares tile across page. Has different modes. Pop-ups: Tiles fades in and pops onto page. Kaleidoscope: colors smoothly transition and change. Stationary. </a></dd>
               <dd class="project-tile"><a target="_blank" href="TilingSeries/DodecaSquaresTiles/index.html">Tiling Series: DodecaSquare Rings<img src="images/project-covers/dodeca-cover.png">Interactive geometric art made using HTML5 canvas. Scroll to bottom of page for different settings. Rings are centered around an n-pointed star (default n value = 12)</a></dd>
             </div>
           </dl>
