(fix) updated links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <div id="portfolio-content">
       <p>Hello there! My name is Jamila.
-        I am an aspiring Software Developer seeking to work for and volunteer in the Tech for Social Good sector. Always a Student seeking to expand my mind, my skills, and my impact. In my spare time, I explore the intersection of programming, math and art. Currently, I am working on completing my Multimedia Computing, B.S. degree with minors in Political Science, Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
+        I am an aspiring Software Developer seeking to work for and volunteer in the Tech for Social Good space. Always a Student seeking to expand my mind, my skills, and my impact. In my spare time, I explore the intersection of programming, math and art. Currently, I am working on completing my Multimedia Computing, B.S. degree with minors in Political Science, Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
 
         Below are some projects I've worked on: </p>
 
@@ -84,7 +84,7 @@
 
         <section id="fcc">
           <h2>Free Code Camp Projects</h2>
-          <p>Source Code: <a href="https://github.com/jtoaha/freecodecamp-projects">https://github.com/jtoaha/freecodecamp-projects</a></p>
+          <p>Source Code: <a target="_blank" href="https://github.com/jtoaha/freecodecamp-projects">https://github.com/jtoaha/freecodecamp-projects</a></p>
           <dl class="project-list">
             <dt>Front End Libraries Projects (Summer 2020):</dt>
             <div>
@@ -101,7 +101,7 @@
         <section id="cisc3610">
           <h2>CISC 3610: Introduction to Multimedia Programming</h2>
           <p>Spring 2020</p>
-          <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
+          <p>Source Code: <a target="_blank" href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
           <p>General guidelines and constraints to follow were given. Other than that, was able to excercise creative freedom in these projects</p>
           <dl class="project-list">
             <dt>Projects:</dt>
@@ -145,7 +145,7 @@
         <section id="game-design">
           <h2>Game Design</h2>
           <p>Spring 2020</p>
-          <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
+          <p>Source Code: <a target ="_blank" href="https://www.openprocessing.org/sketch/847343/">https://www.openprocessing.org/sketch/847343</a></p>
           <dl class="project-list">
             <dt>Solo Project</dt>
             <dd class="project-tile project-tile-wide"><a target="_blank"  href="https://www.openprocessing.org/sketch/847343">galactic diesel etc<img src="images/project-covers/game-design-solo-cover.png">I created this game for my Game Design course. Luna's goal is to collect galactic dots to refuel her tank. Implemented a score meter that resembles a tank being filled based on number of galactic dots collected. Also, implements different features, such as drawing Besier and Spline curves, pressing specified keys allow red, green or blue tints to be applied to an image, etc. Luna was taken from a previous Processing project (Java) of mine and was converted and scaled to be compatible with p5.js and the goals of this game. Launched on openprocessing.org </a></dd>
@@ -157,7 +157,7 @@
         <section id="hci">
           <h2>Human Computer Interaction</h2>
           <p>Spring 2020</p>
-          <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
+          <p>Source Code: <a target= "_blank" href="https://github.com/jtoaha/jtoaha.github.io/tree/master/CISC3650/CISC3650Website">https://github.com/jtoaha/jtoaha.github.io/tree/master/CISC3650/CISC3650Website</a></p>
           <dl class="project-list">
             <dt>Solo Project</dt>
             <dd class="project-tile project-tile-wide"><a target="_blank" href="CISC3650/CISC3650Website/index.html">Website: Chill Beats<br><img src="images/project-covers/chill-beats-cover.png"></a><br>Implements Local Storage, grants ability to add and bookmark Youtube videos, adds option to change background color, implements HTML5 Geolocation, as well as embeds a Google Map API.</dd>
