(doc) added descriptions for Free Code Camp projects

--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
           <dl class="project-list">
             <dt>Front End Libraries Projects (Summer 2020):</dt>
             <div>
-              <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-pomodoro-clock/dist/index.html">Pomodoro Clock built with React.js<img src="images/project-covers/pomodoro-cover.png"></a></dd>
-              <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-js-calculator/dist/index.html">Javascript Calculator (using React.js)<img src="images/project-covers/calculator-cover.png"></a></dd>
-              <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-drum-machine/dist/index.html">Drum Machine (using React)<img src="images/project-covers/drum-cover.png"></a></dd>
+              <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-pomodoro-clock/dist/index.html">Pomodoro Clock built with React.js<img src="images/project-covers/pomodoro-cover.png"></a>Built a Pomodoro Timer that alternates alternates between Session and Break modes. Built using React.js. Page layout implemented with CSS Grid.</dd>
+              <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-js-calculator/dist/index.html">Javascript Calculator (using React.js)<img src="images/project-covers/calculator-cover.png"></a>This Javascript Calculator was built using React.js and uses a CSS grid layout. Implements Formula/Expression Logic (takes into account operator precedence) rather than Immediate Execution Logic.
+              </dd>
+              <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-drum-machine/dist/index.html">Drum Machine (using React)<img src="images/project-covers/drum-cover.png"></a>Drum Machine built using React.js. Event handlers (keyboard and mouse) added to buttons which trigger associated sound files to play.</dd>
               <dd class="project-tile"><a target="_blank" href="FreeCodeCampProjects/fcc-markdown-previewer/dist/index.html">Markdown Previewer (using React and Redux)<img src="images/project-covers/markdown-cover.png"></a></dd>
               <dd class="project-tile"><a target="_blank"  href="FreeCodeCampProjects/fcc-random-quote-machine/dist/index.html">Random Quote Machine (using React)<img src="images/project-covers/quote-cover.png"></a></dd>
             </div>
