(update) blurb update

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <div id="portfolio-content">
       <p>Hello there! My name is Jamila.
-        I am an aspiring Software Developer seeking to work for and volunteer in the Tech for Social Good space. Always a Student seeking to expand my mind, my skills, and my impact. In my spare time, I explore the intersection of programming, math and art. Currently, I am working on completing my Multimedia Computing, B.S. degree with minors in Political Science, Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
+        I am an aspiring Software Developer seeking to work for and volunteer in the Tech for Social Good space. Always a Student seeking to expand my mind, my skills, and my impact. In my spare time, I explore the intersection of programming, math and art. Currently, I am working on completing my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College. Should be done by the end of 2020!
 
         Below are some projects I've worked on: </p>
 
