--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         Below are some projects I've worked on: </p>
 
 
-        <section id="CISC3630">
+        <section id="cisc3630">
           <h2>CISC 3630: Multimedia Computing</h2>
           <p> Disclaimer: Most of the assets are borrowed here. There are assets I've modified for more customized use. However, the logic present in the animation, drag and drop, and game aspect is original. </p>
           <p>Source Code: <a target="_blank" href="https://github.com/jtoaha/CISC3630/">https://github.com/jtoaha/CISC3630/</a></p>
@@ -82,7 +82,7 @@
 
               <dd class="project-tile"><a target="_blank" href="CISC3630/wick-drag-and-drop/DragAndDrop-JamilaToaha.html">Drag and Drop<img src="images/project-covers/wick-drag-and-drop-cover.png">Fun Drag and Drop made using Wick Editor. Part of the assignment was to add humor, so may have taken some liberties. Takes a few moments to load.</a></dd>
 
-              <dd class="project-tile"><a target="_blank" href="CISC3630/Clickteam-Fusion-Pushin_In_The_Stars/index.html">Pushin (the cat) In The Stars<img src="images/project-covers/pushin-cover.png">Mini Game created using Clickteam Fusion. Takes a few moments to load.</a></dd>
+              <dd class="project-tile"><a target="_blank" href="CISC3630/Pushin_In_The_Stars_Jamila_Toaha/index.html">Pushin (the cat) In The Stars<img src="images/project-covers/pushin-cover.png">Mini Game created using Clickteam Fusion. Takes a few moments to load.</a></dd>
 
             </dl>
             </section>
