(update) updated blurb on homepage

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <div id="portfolio-content">
       <p>Hello there! My name is Jamila.
-        I am an aspiring Software Developer seeking to work for and volunteer in the Tech for Social Good space. Always a Student seeking to expand my mind, my skills, and my impact. In my spare time, I explore the intersection of programming, math and art. Currently, I am working on completing my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College. Should be done by the end of 2020!
+        I am a Software Developer with an interest in the intersection of math and art. Forever considering myself a Student and Apprentice of Life, I seek to expand my mind, my skills, and my impact. These past couple of years I have been exploring different technologies and languages and have been working on refining my programming skills. I completed the Grace Hopper Program at Fullstack Academy in April 2019 and completed my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College in December 2020.
 
         Below are some projects I've worked on: </p>
 
