(feat) added updated technical resume and blurb

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <h2>Portfolio</h2>
 
       <div id="portfolio-content">
-      <p>Hello there! My name is Jamila.
-        I am a Software Developer with an interest in the intersection of math and art. Forever considering myself a Student and Apprentice of Life, I seek to expand my mind, my skills, and my impact. These past couple of years I have been exploring different technologies and languages and have been working on refining my programming skills. I completed the Grace Hopper Program at Fullstack Academy in April 2019 and completed my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College in December 2020.
+      <p>Hello! My name is Jamila.
+        I am a Software Developer seeking to make meaningful, impactful, and high quality contributions. My particular niche I'm interested in is the intersection of math and art but am open to all. These past couple of years I have been exploring different technologies and languages and have been working on refining my programming skills. I completed the Grace Hopper Program at Fullstack Academy in April 2019 and completed my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College in December 2020.
 
         Below are some projects I've worked on: </p>
 
@@ -275,7 +275,7 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
   <div id="resume-content">
 
      <object data="Jamila Toaha - Tech Resume - 081420.pdf" type="application/pdf" width="100%" height="100%">
-      <p>Technical Resume (as of 8/14/20): <a  target="_blank" href="docs/Jamila Toaha - Tech Resume - 081420.pdf">Download</a></p>
+      <p>Technical Resume (as of 12/20/20): <a  target="_blank" href="docs/Jamila Toaha - Tech Resume - 122020.pdf">Download</a></p>
     </object>
      <object data="Jamila Toaha Non-Technical Resume 11_20_19.pdf" type="application/pdf" width="100%" height="100%">
       <p>Non-Technical Resume (11/20/19):<a target="_blank" href="docs/Jamila Toaha Non-Technical Resume 11_20_19.pdf">Download</a></p>
