--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 
       <div id="portfolio-content">
       <p>Hello! My name is Jamila.
-        I am a Software Developer seeking to make meaningful, impactful, and high quality contributions. My particular niche I'm interested in is the intersection of math and art but am open to all. These past couple of years I have been exploring different technologies and languages and have been working on refining my programming skills. I completed the Grace Hopper Program at Fullstack Academy in April 2019 and completed my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College in December 2020.
+        I am a Full Stack Web Developer with a focus on responsive web design. And I am passionate about creating seamless user experiences. Over the past year, I have mostly been working on building Progressive Web Apps and on a more limited scale creating computational and digital art.
+
+        I completed the Grace Hopper Program at Fullstack Academy in April 2019 and completed my Multimedia Computing, B.S. degree with a minor in Film at Brooklyn College in December 2020. I mostly specialize in Javascript, HTML, and CSS, but over the years have briefly explored many different technologies and languages and have been working on refining my programming skills.
 
         Below are some projects I've worked on: </p>
 
